<?xml version="1.0"?>
<package format="3">
  <name>uav_core</name>
  <version>1.0.0</version>
  <description>UAV Core Simulation</description>

  <maintainer email="student@project.com">student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
